--- a/index.html
+++ b/index.html
@@ -8,19 +8,48 @@
     <meta name="description" content="">
   </head>
   <body>
-    <ul>
-      <li>Home</li>
-      <li>Menu</li>
-      <li>About Us</li>
-      <li>Order Now</li>
-    </ul>
-    <h1>Bob's Burgers</h1>
-    <button>Order Now</button>
-    <h2>World's Best Burgers</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa.</p>
-    <button>View Menu</button>
-    <h2>Dine-in or Take-out</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa.</p>
-    <button>Contact Us</button>
+    <nav>
+      <ul>
+        <li>Home</li>
+        <li>Menu</li>
+        <li>About Us</li>
+        <li>Order Now</li>
+      </ul>
+    </nav>
+
+    <header>
+      <img src="img/logo.png">
+      <button>Order Now</button>
+    </header>
+
+    <main>
+      <article>
+        <section>
+          <h2>World's Best Burgers</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa.</p>
+        </section>
+
+        <section>
+           <img src="img/bob-burger.png">
+        </section>
+      </article>
+
+      <article>
+        <section>
+          <button>View Menu</button>
+          <h2>Dine-in or Take-out</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa.</p>
+          <button>Contact Us</button>
+        </section>
+
+         <section>
+           <img src="img/bob-headshot.png">
+        </section>
+      </article>
+    </main>
+
+    <footer>
+     <img src="img/logo.png">
+    </footer>
   </body>
 </html>
