--- a/index.html
+++ b/index.html
@@ -2,55 +2,83 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
     <link rel="stylesheet" href="">
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-    <title></title>
+
+    <title>Homework 3</title>
+
     <meta name="description" content="">
+
   </head>
+
   <body>
-    <nav>
-      <ul>
-        <li>Home</li>
-        <li>Menu</li>
-        <li>About Us</li>
-        <li>Order Now</li>
-      </ul>
-    </nav>
+   <nav class="navbar navbar-expand-md">
+    <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href="#">Home</a>
+            </li>
+          
+            <li class="nav-item">
+                <a class="nav-link" href="#">Menu</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">About Us</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">ORDER NOW</a>
+            </li>
+        </ul>
+    </div>
+  </nav>
 
     <header>
-      <img src="img/logo.png">
-      <button>Order Now</button>
-    </header>
+            <div class="jumbotron text-center" style="background-image: url(img/banner-bg.png);">
+                  <div><img src="img/logo.png">
+                      <div><a class="btn btn-secondary btn-rounded"><i class="far fa-clone left"></i>Order Now</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+     </header>
 
-    <main>
-      <article>
-        <section>
+
+    <main class="container">
+      <section class="row">
+        <article class="col-12 col-sm-6">
           <h2>World's Best Burgers</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa.</p>
-        </section>
+         <button>View Menu</button>
+        </article>
 
-        <section>
-           <img src="img/bob-burger.png">
-        </section>
-      </article>
+        <article class="col-12 col-sm-6">
+           <img src="img/bobs-burger.png">
+        </article>
 
-      <article>
-        <section>
-          <button>View Menu</button>
+    </section>
+
+      <section class="row">
+        <article class="col-12 col-sm-6">
+           <img src="img/bob-headshot.png">
+        </article>
+
+        <article class="col-12 col-sm-6">
           <h2>Dine-in or Take-out</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa.</p>
           <button>Contact Us</button>
-        </section>
+        </article>
 
-         <section>
-           <img src="img/bob-headshot.png">
-        </section>
-      </article>
+      </section>
     </main>
 
     <footer>
+      <div class="footer-copyright text-center py-3">
      <img src="img/logo.png">
+   </div>
     </footer>
   </body>
 </html>
