--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <header>
             <div class="jumbotron text-center" style="background-image: url(img/banner-bg.png);">
                   <div><img src="img/logo.png">
-                      <div><a class="btn btn-secondary btn-rounded"><i class="far fa-clone left"></i>Order Now</a>
+                      <div><button class="btn btn-secondary btn-rounded"><i class="far fa-clone left"></i>Order Now</button>
                     </div>
                 </div>
             </div>
@@ -47,29 +47,29 @@
      </header>
 
 
-    <main class="container">
+    <main class="container-fluid">
       <section class="row">
-        <article class="col-12 col-sm-6">
+        <article class="col-12 col-sm-8">
           <h2>World's Best Burgers</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa.</p>
-         <button>View Menu</button>
+         <button class="btn btn-secondary btn-rounded">View Menu</button>
         </article>
 
-        <article class="col-12 col-sm-6">
+        <article class="col-12 col-sm-4">
            <img src="img/bobs-burger.png">
         </article>
 
     </section>
 
       <section class="row">
-        <article class="col-12 col-sm-6">
+        <article class="col-12 col-sm-4">
            <img src="img/bob-headshot.png">
         </article>
 
-        <article class="col-12 col-sm-6">
+        <article class="col-12 col-sm-8">
           <h2>Dine-in or Take-out</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa.</p>
-          <button>Contact Us</button>
+          <button class="btn btn-secondary btn-rounded">Contact Us</button>
         </article>
 
       </section>
