--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <a class="nav-link" href="#">About Us</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">ORDER NOW</a>
+                <a class="nav-link red" href="#">ORDER NOW</a>
             </li>
         </ul>
     </div>
@@ -50,7 +50,7 @@
     <main class="container-fluid">
       <section class="row">
         <article class="col-12 col-sm-8">
-          <h2>World's Best Burgers</h2>
+          <h2>WORLD'S BEST <span class="red">BURGERS</span></h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa.</p>
          <button class="btn btn-secondary btn-rounded">View Menu</button>
         </article>
@@ -67,7 +67,7 @@
         </article>
 
         <article class="col-12 col-sm-8">
-          <h2>Dine-in or Take-out</h2>
+          <h2>DINE-IN or <span class="red">TAKE-OUT</span></h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa.</p>
           <button class="btn btn-secondary btn-rounded">Contact Us</button>
         </article>
