--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
     <link rel="stylesheet" href="css/main.css">
 
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700" rel="stylesheet">
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
 
     <title>Homework 3</title>
@@ -18,7 +20,7 @@
   <body>
    <nav class="navbar navbar-expand-md">
     <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
-        <ul class="navbar-nav mr-auto">
+        <ul class="navbar-nav mr-auto" id="links">
             <li class="nav-item active">
                 <a class="nav-link" href="#">Home</a>
             </li>
@@ -39,7 +41,7 @@
     <header>
             <div class="jumbotron text-center" style="background-image: url(img/banner-bg.png);">
                   <div><img src="img/logo.png">
-                      <div><button class="btn btn-secondary btn-rounded"><i class="far fa-clone left"></i>Order Now</button>
+                      <div><button class="btn btn-secondary btn-rounded" href="#"><i class="far fa-clone left"></i>Order Now</button>
                     </div>
                 </div>
             </div>
@@ -52,7 +54,7 @@
         <article class="col-12 col-sm-8">
           <h2>WORLD'S BEST <span class="red">BURGERS</span></h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa.</p>
-         <button class="btn btn-secondary btn-rounded">View Menu</button>
+         <button class="btn btn-secondary btn-rounded" href="#">View Menu</button>
         </article>
 
         <article class="col-12 col-sm-4">
@@ -69,7 +71,7 @@
         <article class="col-12 col-sm-8">
           <h2>DINE-IN or <span class="red">TAKE-OUT</span></h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa.</p>
-          <button class="btn btn-secondary btn-rounded">Contact Us</button>
+          <button class="btn btn-secondary btn-rounded" href="#">Contact Us</button>
         </article>
 
       </section>
