Add nested styles for section and headers

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <a class="nav-link" href="#">About Us</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link red" href="#">ORDER NOW</a>
+                <a class="nav-link" href="#">ORDER NOW</a>
             </li>
         </ul>
     </div>
@@ -41,7 +41,7 @@
     <header>
             <div class="jumbotron text-center" style="background-image: url(img/banner-bg.png);">
                   <div><img src="img/logo.png">
-                      <div><button class="btn btn-secondary btn-rounded" href="#"><i class="far fa-clone left"></i>Order Now</button>
+                      <div><button id="links" class="btn btn-secondary btn-rounded buttons" href="#"><i class="far fa-clone left"></i>Order Now</button>
                     </div>
                 </div>
             </div>
@@ -52,9 +52,9 @@
     <main class="container-fluid">
       <section class="row">
         <article class="col-12 col-sm-8">
-          <h2>WORLD'S BEST <span class="red">BURGERS</span></h2>
+          <h1>WORLD'S BEST <span>BURGERS</span></h1>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa.</p>
-         <button class="btn btn-secondary btn-rounded" href="#">View Menu</button>
+         <button id="links" class="btn btn-secondary btn-rounded buttons" href="#">View Menu</button>
         </article>
 
         <article class="col-12 col-sm-4">
@@ -69,9 +69,9 @@
         </article>
 
         <article class="col-12 col-sm-8">
-          <h2>DINE-IN or <span class="red">TAKE-OUT</span></h2>
+          <h1>DINE-IN or <span>TAKE-OUT</span></h1>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa.</p>
-          <button class="btn btn-secondary btn-rounded" href="#">Contact Us</button>
+          <button id="links" class="btn btn-secondary btn-rounded buttons" href="#">Contact Us</button>
         </article>
 
       </section>
