--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
             <li class="nav-item">
                 <a class="nav-link" href="#">About Us</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">ORDER NOW</a>
+          <li class="nav-item">
+                <a class="nav-link" id="red" href="#">ORDER NOW</a>
             </li>
         </ul>
     </div>
