Add background color to bottom section

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 
     <main class="container-fluid">
-      <section class="row">
+      <section class="row" id="burgers">
         <article class="col-12 col-sm-8">
           <h1>WORLD'S BEST <span>BURGERS</span></h1>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa.</p>
@@ -63,7 +63,8 @@
 
     </section>
 
-      <section class="row">
+
+      <section class="row takeout">
         <article class="col-12 col-sm-4">
            <img src="img/bob-headshot.png">
         </article>
@@ -75,6 +76,7 @@
         </article>
 
       </section>
+    </div>
     </main>
 
     <footer>
